[COLOR yellow][B]v1.6.1[/B][/COLOR]
* Wizard update dialog progress doesn't close bug fix.
[COLOR yellow][B]v1.6.0[/B][/COLOR]
* Kodi 21 migration message typo.
* Hide "Build designed for..." in build menu.
[COLOR yellow][B]v1.5.9[/B][/COLOR]
* APK auto update - TEMPORARY show kodi 21 migration message.
[COLOR yellow][B]v1.5.8[/B][/COLOR]
* Windows auto update - make WINDOWS_DOWNLOAD_URL  in uservar.py generic, build download URL using LATEST_WINDOWS_VERSION_TEXT_FILE.
[COLOR yellow][B]v1.5.7[/B][/COLOR]
* Remove Kodi 19 builds settings in builds menu.
[COLOR yellow][B]v1.5.6[/B][/COLOR]
* Rename NotificationsWithDownloaderImage.xml to NotificationsWithExtraImage.xml.
* Change function show_notification_with_extra_image to get generic image id and URL.
* Add build skin switch notifcation window on manual build skin switch / first build launch.
[COLOR yellow][B]v1.5.5[/B][/COLOR]
* Wizard auto update - Change dialog progress to BG for smoother wizard update.
[COLOR yellow][B]v1.5.4[/B][/COLOR]
* BUG FIX: First build launch notification doesn't show after installing on existing build.
[COLOR yellow][B]v1.5.3[/B][/COLOR]
* Small Real Debrid Speed Test function refactor.
[COLOR yellow][B]v1.5.2[/B][/COLOR]
* Add Real Debrid Speed Test function (Android/Windows only).
[COLOR yellow][B]v1.5.1[/B][/COLOR]
* Windows kodi auto update - remove open browser, direct download only.
[COLOR yellow][B]v1.5.0[/B][/COLOR]
* Kodi version update - Added verification if custom Kodi APK/Windows software installed.
[COLOR yellow][B]v1.4.9[/B][/COLOR]
* Add support for custom Windows kodi software auto update check (Open browser, direct downloaded commented).
* Refactor code
[COLOR yellow][B]v1.4.8[/B][/COLOR]
* Migrate auto quick update notification URL + settings to custom to avoid default notification vars.
* Enable wizard's default notification settings - show post build install message.
* Remove startup build switch skin popup post build install.
[COLOR yellow][B]v1.4.7[/B][/COLOR]