@@ -1,3 +1,6 @@
+[COLOR yellow][B]v1.6.2[/B][/COLOR]
+* Change APK_PACKAGE_ID to 'org.xbmc.kodirdil'
+* Remove temporary Kodi 21 migration message.
 [COLOR yellow][B]v1.6.1[/B][/COLOR]
 * Wizard update dialog progress doesn't close bug fix.
 [COLOR yellow][B]v1.6.0[/B][/COLOR]
